# SDL_Template

./: .gitignore  CMakeLists.txt  README.md  build.sh  compile.sh  main.cpp
cmake/: FindSDL2.cmake  sdl2.cmake
